# TrampoBot

./: Makefile  README.md  pyproject.toml
src/trampobot/: main.py
src/trampobot/api/: router.py  webhooks.py
